# dcrpy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: dual_rpg.md  index.md  retrieve.md  rpg_binary.md
src/dcrpy/: __init__.py  deprecated_nebula.py  dual_rpg.py  info.yml  nebula.py  rpg_binary.py  rpg_nc.py  types.py  utils.py
src/dcrpy/config/: radar_info.yml  rpg_variables_name_version.yml
src/dcrpy/io/: io.py
src/dcrpy/leonie von Terzi/: _dealiazing.py  plotRHI.py  processW-Band.py  process_Wband_functions.py
src/dcrpy/plotting/: __init__.py  info.yml  utils.py
src/dcrpy/retrieve/: __init__.py  moments.py  retrieve.py
tests/: _test_radar_1_class_nc_lv0.py  _test_radar_1_class_nc_lv1.py  _test_radar_1_plot_lv1.py  _test_radar_2_dealiazing.py  _test_radar_2_plot_lv0.py  _test_radar_3_nebula_plot.py  conftest.py  test_radar_0_read_rpg.py  test_radar_0_utils.py  test_radar_1_class_binary.py  test_radar_1_class_nc_lv0.py  test_radar_1_class_nc_lv1.py  test_radar_1_plot_lv1.py  test_radar_1_retrieve.py  test_radar_2_plot_lv0.py  test_radar_2_plot_lv0_binary.py  test_radar_2_plot_retrieve.py  test_radar_3_dual_rpg.py  test_radar_3_moments.py  test_radar_3_nebula_plot.py  test_radar_3_plot_dual_rpg.py
tests/data/RAW/nephele/2023/05/17/: 230517_084500_P00_PPI.LV1
tests/data/RAW/nephele/2024/02/09/: 240209_022515_P00_RHI.LV1
tests/data/cloudnet/: 20211218_granada_rpg-fmcw-94.nc
