[project]
name = "dcrpy"
version = "0.1.0"
description = "Python tools for Doppler Cloud Radar (DCR) data processing, quality control, and microphysical analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Juan Antonio Bravo Aranda" }
]
license = { text = "Proprietary" }
keywords = ["doppler cloud radar", "radar meteorology", "remote sensing", "xarray"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
  "numpy>=1.24",
  "xarray>=2023.1.0",
  "matplotlib>=3.7",
  "loguru>=0.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.11",
  "black>=24.0",
]
io = [
  "netCDF4>=1.6",
]
full = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.11",
  "black>=24.0",
  "netCDF4>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dcrpy"]

[tool.hatch.build.targets.sdist]
include = [
  "src/dcrpy",
  "README.md",
  "pyproject.toml",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.11",
  "black>=24.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
